[gd_scene load_steps=31 format=3 uid="uid://bd5hj26cc16d2"]

[ext_resource type="Script" uid="uid://mvifnud8nrv3" path="res://src/entities/enemies/Turret.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://22mlxu8p1pyp" path="res://src/entities/enemies/TurretProjectile.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://cvy38xjo8lmsg" path="res://assets/textures/enemies/golem/Golem_IdleA.png" id="3_chgy7"]
[ext_resource type="Texture2D" uid="uid://c44c3qaavb35r" path="res://assets/textures/enemies/golem/Golem_Full.png" id="3_tcn5k"]
[ext_resource type="Script" uid="uid://biif72o373js7" path="res://src/entities/enemies/DetectionArea.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://nxahbd65y1it" path="res://assets/textures/enemies/golem/Golem_AttackB.png" id="4_aag6v"]
[ext_resource type="Texture2D" uid="uid://b3tiw6vh2vdsk" path="res://assets/textures/enemies/golem/Golem_Death_FX.png" id="4_jnkdk"]
[ext_resource type="Texture2D" uid="uid://bctnrl3hx26n" path="res://assets/textures/green_circle.png" id="5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mxww5"]
atlas = ExtResource("3_tcn5k")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiepl"]
atlas = ExtResource("3_tcn5k")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p28ma"]
atlas = ExtResource("3_tcn5k")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdf0b"]
atlas = ExtResource("3_tcn5k")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvltu"]
atlas = ExtResource("3_tcn5k")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtvpq"]
atlas = ExtResource("3_tcn5k")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw7uh"]
atlas = ExtResource("4_jnkdk")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2maex"]
atlas = ExtResource("4_jnkdk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yumqk"]
atlas = ExtResource("4_jnkdk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sngj"]
atlas = ExtResource("4_jnkdk")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_njpiu"]
atlas = ExtResource("4_aag6v")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf6ap"]
atlas = ExtResource("4_aag6v")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vei5"]
atlas = ExtResource("4_aag6v")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkjny"]
atlas = ExtResource("4_aag6v")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6dqk"]
atlas = ExtResource("4_aag6v")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aag6v"]
atlas = ExtResource("3_chgy7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wtxx"]
atlas = ExtResource("3_chgy7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcn5k"]
atlas = ExtResource("3_chgy7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnkdk"]
atlas = ExtResource("3_chgy7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_njpiu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxww5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiepl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p28ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdf0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvltu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtvpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw7uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2maex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yumqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sngj")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_njpiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf6ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vei5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkjny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6dqk")
}],
"loop": true,
"name": &"hitted",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aag6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wtxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcn5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnkdk")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mf6ap"]
radius = 8.0
height = 23.0

[sub_resource type="CircleShape2D" id="2"]
radius = 167.003

[node name="Turret" type="StaticBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("2")
projectile_scene = ExtResource("3")

[node name="FireTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FirePosition" type="Marker2D" parent="."]
position = Vector2(0, -30.0339)

[node name="Body" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -15)
sprite_frames = SubResource("SpriteFrames_njpiu")
animation = &"die"
frame = 5
frame_progress = 0.250812

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -11.5)
shape = SubResource("CapsuleShape2D_mf6ap")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0.0428963, -30.0659)
target_position = Vector2(0, 0)
collision_mask = 3

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("4")

[node name="GreenCircle" type="Sprite2D" parent="DetectionArea"]
modulate = Color(1, 1, 1, 0.301961)
scale = Vector2(1.3, 1.3)
texture = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("2")

[node name="HitTimer" type="Timer" parent="DetectionArea"]

[connection signal="animation_finished" from="Body" to="." method="_on_body_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="DetectionArea/HitTimer" to="." method="_on_hit_timer_timeout"]
